	ErrorDialog,WarningDialog,MissingMediaDialog): Set transient status 
	if parent is given. 
	* src/EventEdit.py (__init__): Make dialog modal and transient for 
	its parent. 
	* src/Witness.py: Make WittnessEditor dialog modal and transient for 
	its parent. Call SelectPerson with itself as a parent. 
	* src/SelectPerson.py (__init__): Make dialog transient for its parent.
	* src/imagesel.glade: Define proper responses and delete unneeded handlers 
	for buttons. Make gtkFileEntry modal. 
	* src/dialog.glade (all dialogs): Define proper responses for buttons. 
	* src/EditPerson.py (on_add_aka_clicked, on_aka_update_clicked): 
	Call NameEdit with itself as a parent; (on_add_attr_clicked,
	on_update_attr_clicked): Call AttributeEditor with itself as a parent; 
	(on_add_addr_clicked,on_update_addr_clicked): Call AddressEditor with
	itself as a parent; (on_add_url_clicked,on_update_url_clicked): Call 
	UrlEditor with itself as a parent; (on_name_note_clicked,
	on_ldsbap_note_clicked,on_ldsendow_note_clicked,
	on_ldsseal_note_clicked): Call NoteEditor with itself as a parent. 
	* src/NameEdit.py (__init__): Make dialog modal and transient for 
	its parent. 
	* src/AttrEdit.py (__init__): Likewise.
	* src/AddrEdit.py (__init__): Likewise.
	* src/UrlEdit.py (__init__): Likewise.
	* src/NoteEdit.py (__init__): Likewise.

2003-09-14  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/TimeLine.py: call doc.init routine to build header
	* src/FontScale.py: try to handle non-ASCII characters

2003-09-13  Don Allingham  <dallingham@users.sourceforge.net>
	* src/docgen/SvgDrawDoc.py: use proper init parameters for BaseDoc
	* src/docgen/PSDrawDoc.py: use proper init parameters for BaseDoc
	* src/docgen/OpenOfficeDoc.py: handle rotation of text better
	* src/Report.py: Proper init sequence for BaseDoc derived reports

2003-09-13  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/AncestorChart.py (AncestorChart.__init__): Call calc()